# allseeingeye

./: .gitignore  .yamllint.yml  COMPONENTS.md  Cargo.toml  LICENSE  README.md  deny.toml  package.json  perf-budgets.json  pnpm-lock.yaml
.claude/agents/: aseye-ci-release.md  aseye-frontend-features.md  aseye-frontend-tooling.md  aseye-rust-backend.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  perf.yml  release-dry-run.yml  release.yml  security.yml
apps/desktop/: eslint.config.mjs  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/benches/: classify_bench.rs  parser_bench.rs
apps/desktop/src-tauri/bindings/backup/: BackupErrorEntry.ts  BackupErrorKind.ts  BackupReport.ts  BackupStatus.ts  RestoreErrorEntry.ts  RestoreErrorKind.ts  RestoreReport.ts  VerifyErrorEntry.ts  VerifyErrorKind.ts  VerifyReport.ts
apps/desktop/src-tauri/bindings/index/: UpsertOutcome.ts  UpsertResult.ts
apps/desktop/src-tauri/bindings/ipc/: ComponentDetail.ts  ComponentDetailWithRaw.ts  ComponentFilter.ts  ComponentFindingsCount.ts  ComponentSummary.ts  FindingSummary.ts  HealthSummary.ts  IpcError.ts  SaveOutcome.ts  SearchQuery.ts  SearchResult.ts  SecurityCategoryCounts.ts  SecurityFilter.ts  SecuritySummary.ts  SeverityCounts.ts  ToolHealthCount.ts
apps/desktop/src-tauri/bindings/parser/: ParseWarning.ts  ParseWarningKind.ts  ParsedComponent.ts
apps/desktop/src-tauri/bindings/pipeline/: PipelineEvent.ts  ScanReport.ts
apps/desktop/src-tauri/bindings/projects/: LinkRewrite.ts  MemoryAnalysisReport.ts  MemoryFileSummary.ts  MemoryRecommendation.ts  MemoryRecommendationKind.ts  ProjectSummary.ts  ReorganizeError.ts  ReorganizeErrorKind.ts  ReorganizeMove.ts  ReorganizeReport.ts  WorktreeEntry.ts  WorktreeReport.ts
apps/desktop/src-tauri/bindings/registry/: ComponentRoot.ts  ComponentType.ts  DetectedTool.ts  Format.ts  Scope.ts  ToolDescriptor.ts  ToolId.ts
apps/desktop/src-tauri/bindings/security/: Category.ts  Finding.ts  Severity.ts
apps/desktop/src-tauri/bindings/updates/: UpdateAvailable.ts  UpdateChannel.ts  UpdateError.ts
apps/desktop/src-tauri/bindings/usage/: ByDayRow.ts  ByProjectRow.ts  CostQuery.ts  CostRec.ts  CostRecKind.ts  CostResponse.ts  PriceLookup.ts  SummaryResponse.ts  TokenTotals.ts  UsageToolKind.ts
apps/desktop/src-tauri/bindings/validator/: ParseErrorKind.ts  ValidationError.ts  ValidationOutcome.ts  ValidationWarning.ts  ValidationWarningKind.ts
apps/desktop/src-tauri/bindings/watcher/: WatchEvent.ts
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/backup/: auto.rs  envelope.rs  keychain.rs  keypair.rs  manifest.rs  mod.rs  orchestrate.rs  storage.rs  types.rs
apps/desktop/src-tauri/src/fs/: atomic.rs  error.rs  mod.rs  safety.rs
apps/desktop/src-tauri/src/index/: conn.rs  error.rs  migrate.rs  mod.rs  schema.rs  settings.rs  soak.rs  upsert.rs  wipe.rs
apps/desktop/src-tauri/src/ipc/: commands.rs  mod.rs  types.rs  updates.rs
apps/desktop/src-tauri/src/mcp/: mod.rs
apps/desktop/src-tauri/src/parser/: error.rs  hash.rs  json.rs  markdown.rs  mod.rs  toml.rs  warning.rs  yaml.rs
apps/desktop/src-tauri/src/pipeline/: error.rs  event.rs  mod.rs  scan.rs
apps/desktop/src-tauri/src/projects/: analyze_memory.rs  discover.rs  mod.rs  reorganize_docs.rs  types.rs  worktrees.rs
apps/desktop/src-tauri/src/registry/: classify.rs  detect.rs  mod.rs  project_walker.rs  tools.rs  types.rs
apps/desktop/src-tauri/src/security/: error.rs  finding.rs  mcp_audit.rs  mod.rs  patterns.rs  scanner.rs
apps/desktop/src-tauri/src/usage/: aggregate.rs  claude_code.rs  codex.rs  cwd_decode.rs  mod.rs  pricing.rs  query.rs  recommend.rs  types.rs
apps/desktop/src-tauri/src/validator/: error.rs  mod.rs  schemas.rs  validate.rs
apps/desktop/src-tauri/src/watcher/: coalescer.rs  engine.rs  error.rs  event.rs  mod.rs
apps/desktop/src-tauri/tests/: backup_real_home_proof.rs  project_memory_proof.rs  real_home_scan_proof.rs  usage_real_home_proof.rs
apps/desktop/src-tauri/tests/fixtures/usage/: claude_sample.jsonl  codex_sample.jsonl
apps/desktop/src/components/: CommandPalette.tsx  DiagnosticsPanel.tsx  MainHeader.tsx  Onboarding.tsx  QuickLook.tsx  RedactedPreview.tsx  SecretField.tsx  Sidebar.tsx  Statusbar.tsx  TitleBar.tsx  icons.tsx
apps/desktop/src/components/onboarding/: Detect.tsx  Done.tsx  Permission.tsx  Scan.tsx  Tour.tsx  Welcome.tsx  types.ts
apps/desktop/src/ipc/: events.ts  hooks.ts  index.test.ts  index.ts
apps/desktop/src/lib/: diagnosticsReport.ts  diagnosticsRing.test.ts  diagnosticsRing.ts  diagnosticsSanitiser.test.ts  diagnosticsSanitiser.ts  filterChip.test.ts  filterChip.ts  fixtures.ts  keyboard.ts  onboarding.test.ts  onboarding.ts  paletteActions.test.ts  paletteActions.ts  parseFilter.test.ts  parseFilter.ts  relativeTime.ts  secrets.test.ts  secrets.ts  tokens.test.ts  tokens.ts
apps/desktop/src/store/: ui.ts
apps/desktop/src/styles/: design-system.css  global.css
apps/desktop/src/views/: CostView.tsx  EditorView.tsx  HealthView.tsx  InventoryView.tsx  MapView.tsx  ProjectsView.tsx  SecurityView.tsx  SettingsView.tsx
apps/desktop/tests/: README.md
apps/desktop/tests/e2e/: inventory-search.spec.ts  palette-open.spec.ts  panic-mode.spec.ts  quicklook-open.spec.ts  theme-toggle.spec.ts
design/: README.md  app.js  index.html  styles.css  tokens.json
docs/: 00-README.md  01-vision.md  02-prd.md  03-component-model.md  04-data-sources.md  05-data-architecture.md  06-ux-design.md  07-visual-design.md  08-tech-architecture.md  09-features.md  10-roadmap.md  11-risks.md  12-security.md  14-cost-and-memory.md  15-backup-and-restore.md  16-cloud-storage-backends.md  17-projects-and-actions.md  perf-budgets.md  release-setup.md
scripts/: perf-summary.mjs  with-rust.sh
(+15 files in other folders)
