[package]
name = "aseye-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "All Seeing Eye desktop app"
default-run = "aseye-desktop"

[lints]
workspace = true

[lib]
name = "aseye_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["macos-private-api"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Phase 1.1: tool registry + detection
ts-rs = { version = "10", features = ["serde-compat"] }
dirs = "5"
which = "6"

# Phase 1.2: SQLite index + FTS5 + migrations
# rusqlite "bundled" pins libsqlite3 to the crate's vendored copy so the FTS5
# build is deterministic across mac/win/linux dev machines.
rusqlite = { version = "0.32", features = ["bundled"] }
# r2d2 + r2d2_sqlite give us a small read-only connection pool so frontend
# reads don't contend with the single index-writer task. r2d2_sqlite 0.25
# is the version that pairs with rusqlite 0.32.
r2d2 = "0.8"
r2d2_sqlite = "0.25"
# parking_lot::Mutex is the low-overhead lock guarding the single write
# Connection. We avoid std::sync::Mutex because we want the no-poison and
# faster fast-path semantics across Tokio tasks.
parking_lot = "0.12"

# Phase 1.5: atomic writer + safety guards
# v4 random suffix for collision-resistant temp file names during atomic
# write (`<path>.aseye-tmp-<uuid>`). Pinned to v1.x latest stable.
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
