[package]
name = "aseye-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "All Seeing Eye desktop app"
default-run = "aseye-desktop"

[lints]
workspace = true

[lib]
name = "aseye_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["macos-private-api"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Phase 1.1: tool registry + detection
# `serde-json-impl` (Phase 1.4) makes `ts-rs` derive bindings that map
# `serde_json::Value` to `unknown` on the TS side. Required for the
# parser's `ParsedComponent.structured` and `frontmatter` fields.
ts-rs = { version = "10", features = ["serde-compat", "serde-json-impl"] }
dirs = "5"
which = "6"

# Phase 1.2: SQLite index + FTS5 + migrations
# rusqlite "bundled" pins libsqlite3 to the crate's vendored copy so the FTS5
# build is deterministic across mac/win/linux dev machines.
rusqlite = { version = "0.32", features = ["bundled"] }
# r2d2 + r2d2_sqlite give us a small read-only connection pool so frontend
# reads don't contend with the single index-writer task. r2d2_sqlite 0.25
# is the version that pairs with rusqlite 0.32.
r2d2 = "0.8"
r2d2_sqlite = "0.25"
# parking_lot::Mutex is the low-overhead lock guarding the single write
# Connection. We avoid std::sync::Mutex because we want the no-poison and
# faster fast-path semantics across Tokio tasks.
parking_lot = "0.12"

# Phase 1.5: atomic writer + safety guards
# v4 random suffix for collision-resistant temp file names during atomic
# write (`<path>.aseye-tmp-<uuid>`). Pinned to v1.x latest stable.
uuid = { version = "1", features = ["v4"] }

# Phase 1.3: file watcher.
# `notify` v6 is the canonical cross-platform watcher (FSEvents on macOS,
# inotify on Linux, ReadDirectoryChangesW on Windows). v6 is the current
# maintained line; v7 is unreleased at time of writing.
notify = "6"
# `tokio` is already pulled in transitively by Tauri but we depend on
# `sync::broadcast`, `time::sleep_until`, and the multi-threaded runtime
# explicitly here for the coalescer task. Declaring it makes our intent
# auditable and protects us if a future Tauri release narrows its feature
# set.
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }

# Phase 1.4: parser dispatch (JSON / TOML / YAML / Markdown+frontmatter / MDC).
# `serde_yaml` parses YAML into `serde_json::Value` so all formats produce a
# single uniform downstream shape. v0.9 is the current maintained line.
serde_yaml = "0.9"
# `toml` parses Codex `config.toml` and any other TOML config we encounter.
# v0.8 is the API we standardise on; pinning it here as a direct dep makes
# the version explicit instead of inheriting it transitively.
toml = "0.8"
# `sha2` produces the SHA-256 content hash that drives change detection
# per `docs/05-data-architecture.md`. v0.10 is current and already pulled
# in transitively; declaring it explicitly makes the dependency auditable.
sha2 = "0.10"

# Phase 1.6: path classifier glob matching. `globset` ships gitignore-style
# semantics including `**` (recursive) and `*` (single segment), which we
# need to map filesystem paths to `ComponentRoot` patterns. Hand-rolling a
# `**` matcher is non-trivial; the crate is well-maintained (BurntSushi)
# and pulls in only `bstr` + `regex-automata`, both already in the dep
# graph indirectly.
globset = "0.4"

[dev-dependencies]
tempfile = "3"
# `proptest` powers the round-trip property tests for the parser layer:
# parse(emit(value)) == value (structurally). Dev-only.
proptest = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
