[package]
name = "aseye-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "All Seeing Eye desktop app"
default-run = "aseye-desktop"

[lints]
workspace = true

[lib]
name = "aseye_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["macos-private-api"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
# Phase 6.2: signed auto-update over the channels declared in
# `tauri.conf.json -> plugins.updater`. v2.x line is the one that pairs
# with Tauri 2.x; the manifest format (Ed25519 signature per platform)
# is the shape we already emit from `.github/workflows/release.yml`.
tauri-plugin-updater = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Phase 1.1: tool registry + detection
# `serde-json-impl` (Phase 1.4) makes `ts-rs` derive bindings that map
# `serde_json::Value` to `unknown` on the TS side. Required for the
# parser's `ParsedComponent.structured` and `frontmatter` fields.
ts-rs = { version = "10", features = ["serde-compat", "serde-json-impl"] }
dirs = "5"
which = "6"

# Phase 1.2: SQLite index + FTS5 + migrations
# rusqlite "bundled" pins libsqlite3 to the crate's vendored copy so the FTS5
# build is deterministic across mac/win/linux dev machines.
rusqlite = { version = "0.32", features = ["bundled"] }
# r2d2 + r2d2_sqlite give us a small read-only connection pool so frontend
# reads don't contend with the single index-writer task. r2d2_sqlite 0.25
# is the version that pairs with rusqlite 0.32.
r2d2 = "0.8"
r2d2_sqlite = "0.25"
# parking_lot::Mutex is the low-overhead lock guarding the single write
# Connection. We avoid std::sync::Mutex because we want the no-poison and
# faster fast-path semantics across Tokio tasks.
parking_lot = "0.12"

# Phase 1.5: atomic writer + safety guards
# v4 random suffix for collision-resistant temp file names during atomic
# write (`<path>.aseye-tmp-<uuid>`). Pinned to v1.x latest stable.
uuid = { version = "1", features = ["v4"] }

# Phase 1.3: file watcher.
# `notify` v6 is the canonical cross-platform watcher (FSEvents on macOS,
# inotify on Linux, ReadDirectoryChangesW on Windows). v6 is the current
# maintained line; v7 is unreleased at time of writing.
notify = "6"
# `tokio` is already pulled in transitively by Tauri but we depend on
# `sync::broadcast`, `time::sleep_until`, and the multi-threaded runtime
# explicitly here for the coalescer task. Declaring it makes our intent
# auditable and protects us if a future Tauri release narrows its feature
# set.
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }

# Phase 1.4: parser dispatch (JSON / TOML / YAML / Markdown+frontmatter / MDC).
# `serde_yaml` parses YAML into `serde_json::Value` so all formats produce a
# single uniform downstream shape. v0.9 is the current maintained line.
serde_yaml = "0.9"
# `toml` parses Codex `config.toml` and any other TOML config we encounter.
# v0.8 is the API we standardise on; pinning it here as a direct dep makes
# the version explicit instead of inheriting it transitively.
toml = "0.8"
# `sha2` produces the SHA-256 content hash that drives change detection
# per `docs/05-data-architecture.md`. v0.10 is current and already pulled
# in transitively; declaring it explicitly makes the dependency auditable.
sha2 = "0.10"

# Phase 1.6: path classifier glob matching. `globset` ships gitignore-style
# semantics including `**` (recursive) and `*` (single segment), which we
# need to map filesystem paths to `ComponentRoot` patterns. Hand-rolling a
# `**` matcher is non-trivial; the crate is well-maintained (BurntSushi)
# and pulls in only `bstr` + `regex-automata`, both already in the dep
# graph indirectly.
globset = "0.4"

# Phase 6.2: parse the channel-specific endpoint string from
# `tauri.conf.json -> plugins.updater.endpoints` into a `Url` before
# handing it to `UpdaterBuilder::endpoints(Vec<Url>)`. `url` is already
# pulled in transitively by the updater plugin and tauri itself; we
# declare it explicitly so the direct dep is auditable.
url = "2"

# Phase 7.1: secret detection engine. The security module relies on a
# curated regex set (Anthropic / OpenAI / GitHub / AWS / JWT / private
# keys / bare passwords / generic secret-shaped values) compiled once at
# startup via `RegexSet` for the first-pass scan and per-pattern
# `Regex::find_iter` to extract spans for confirmed hits. `regex` v1 is
# the de-facto Rust regex engine, already pulled in transitively by
# `globset` and `tracing-subscriber`, so declaring it here makes the
# direct dependency auditable rather than implicit.
regex = "1"

# Phase 3.2: per-tool JSON schema validator. `jsonschema` is the
# established Rust JSON Schema validator, actively maintained, and the
# only crate in the ecosystem with a stable error/keyword surface plus
# JSON pointer paths. Compilation is done once per (tool,
# component_type) tuple via `OnceLock` so the upsert hot path only
# pays the validation cost. v0.18 is the stable line that pairs with
# serde_json 1.x without pulling in async runtime features. The
# `draft202012` feature opts in to Draft 2020-12 support; without it
# the `Draft::Draft202012` variant is gated out via cfg.
jsonschema = { version = "0.18", features = ["draft202012"] }

# Phase 15: end-to-end encrypted local backup.
# `aes-gcm` v0.10 is the RustCrypto AES-256-GCM AEAD implementation we
# use for both file-data and DEK-wrap encryption. The crate is a thin
# wrapper around `aes` + `ghash` and is the NIST-blessed primitive in
# pure Rust. We do NOT hand-roll AES.
aes-gcm = "0.10"
# `x25519-dalek` v2 provides the Curve25519 Diffie-Hellman primitive
# used for envelope key wrapping. Each blob carries its own ephemeral
# X25519 keypair; the device long-term public key is the static side
# of the ECDH agreement. v2.x removed the legacy non-canonical scalar
# reduction footgun present in v1, which is why we pin v2 here.
x25519-dalek = { version = "2", features = ["static_secrets"] }
# `hkdf` v0.12 is the RustCrypto HKDF-SHA-256 KDF we run over the ECDH
# shared secret to derive a wrapping key. SHA-256 comes from the
# already-vendored `sha2` v0.10 crate.
hkdf = "0.12"
# `keyring` v3 is the cross-platform OS keychain client (macOS
# Keychain, Windows Credential Manager, Linux libsecret/kwallet). We
# store the X25519 device private key as 64-character hex under
# service `dev.allseeingeye.backup`, account `device-key`. Failure
# to access the keychain (no libsecret on Linux, locked Keychain on
# macOS) maps to `BackupError::KeychainUnavailable` so the UI can
# surface a recoverable error rather than crashing.
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
# `rand_core` v0.6 is the trait surface for the OS-backed CSPRNG used
# to seed AES-GCM nonces and ephemeral X25519 keys. Already pulled in
# transitively by `aes-gcm` and `x25519-dalek` but we declare it as a
# direct dep so the `OsRng` import path is auditable.
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
tempfile = "3"
# `proptest` powers the round-trip property tests for the parser layer:
# parse(emit(value)) == value (structurally). Dev-only.
proptest = "1"
# Phase 5.2 - criterion micro-benchmarks for the parser dispatch and
# path classifier. Only invoked via `cargo bench`; gated behind
# `harness = false` on each `[[bench]]` so the benches do NOT run
# during `cargo test` (criterion's harness collides with the default
# test harness and would slow CI substantially otherwise). The
# `cargo_bench_support` feature is what wires criterion into the
# `cargo bench` driver; we opt out of the default `rayon`-backed
# parallel sampler to keep the dep graph small and the wall-clock
# numbers comparable across runners that pin themselves to a single
# core.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Phase 5.2 - performance regression gates.
# Both benches read crate-public surface only (`parse_bytes`,
# `registry_classify_path`, ...) so they remain stable against
# internal refactors. `harness = false` is mandatory: without it,
# rustc would inject the default libtest harness and criterion's
# `criterion_main!` would not register, breaking the bench binary.
# Explicit invocation: `cargo bench --bench parser_bench` /
# `cargo bench --bench classify_bench` from `apps/desktop/src-tauri/`.
[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "classify_bench"
harness = false
